--- a/.vscode/ejercicioJS.css
+++ b/.vscode/ejercicioJS.css
@@ -5,3 +5,9 @@ h1{
     margin-bottom: 50px;
 
 }
+p{
+    position: relative;
+    margin-left: 400px;
+    margin-top:100px;
+    margin-bottom: 50px;
+}
