--- a/.vscode/ejercicioJS.css
+++ b/.vscode/ejercicioJS.css
@@ -1,7 +1,13 @@
 h1{
     position: relative;
-    margin-left: 400px;
     margin-top:100px;
-    margin-bottom: 50px;
+    margin-left: 80px;
+    font-size: 60px;
 
+}
+.script{
+    font-weight:700;
+    margin-left:100px;
+    font-size: 40px;
+    color:blueviolet;
 }
